; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_fauxclicky.c_fauxclicky_check.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_fauxclicky.c_fauxclicky_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@note_playing = common dso_local global i32 0, align 4
@note_start = common dso_local global i32 0, align 4
@note_period = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fauxclicky_check() #0 {
  %1 = load i32, i32* @note_playing, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %11

4:                                                ; preds = %0
  %5 = load i32, i32* @note_start, align 4
  %6 = call i64 @timer_elapsed(i32 %5)
  %7 = load i64, i64* @note_period, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %4
  %10 = call i32 (...) @fauxclicky_stop()
  br label %11

11:                                               ; preds = %3, %9, %4
  ret void
}

declare dso_local i64 @timer_elapsed(i32) #1

declare dso_local i32 @fauxclicky_stop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
